--- a/templates/timetracking/timetable.html
+++ b/templates/timetracking/timetable.html
@@ -22,12 +22,26 @@
             }
         ]
 	    });
+        // set accounted
+        $(".accountedCheck").click(function(fn){
+            var trackingId = $(this).attr("trackingId");
+            var checkState = "False";
+            if($(this).is(':checked')){
+                checkState = "True";
+            }
+            var data = 'trackingId=' + trackingId + '&accountState='+checkState;
+            $.ajax({
+                url: "/accountIt",
+                type: "POST",
+                contentType: "application/x-www-form-urlencoded; charset=UTF-8",
+                data: data,
+                success: function (fn) {
+                    
+                }
+            });
+        });
 	});
 </script>
-
-{% for trackingRow in trackedTimes %}
-    {{trackingRow.accounted}}          
-{% endfor %}
 
 <table id="timeTable" class="display cell-border table table-hover table-striped table-responsive" width="100%" cellspacing="0">
     <thead>
@@ -58,7 +72,7 @@
 				<td>{{trackingRow.start|date:"d.m.y - H:i:s"}}</td>
 				<td>{{trackingRow.stop|date:"d.m.y - H:i:s"}}</td>
                 <td>{{trackingRow.delta}}</td>
-				<td>{{trackingRow.accounted}}{{ form.accounted|add_class:"form-control"|attr:"checked:trackingRow.accounted"}}</td>
+				<td><input type="checkbox" class="form-control accountedCheck" trackingId="{{trackingRow.id}}" {% if trackingRow.accounted %}checked{% endif %}></td>
             </tr>
 		{% endfor %}
     </tbody>
