--- a/templates/timetracking/projects.html
+++ b/templates/timetracking/projects.html
@@ -14,6 +14,7 @@
 			todayTime({{project.todayTime}},{{project.id}});
 			weekTime({{project.weekTime}},{{project.id}});
 			monthTime({{project.monthTime}},{{project.id}});
+			notAccountedTime({{project.notAccountedTime}},{{project.id}});
 		{% endfor %}
 
 		$(".timerow").click(function(e){
@@ -43,10 +44,7 @@
 			}
 		});
 		//
-		$(".nav-item").click(function(fn){
-			$(".nav-item").removeClass("active");
-			$(this).addClass("active");
-		});
+		
 	});
 </script>
 <style type="text/css">
@@ -86,6 +84,9 @@
 						</li>
 						<li class="nav-item">
 							<a href="#" class="timerow nav-link" timeType="overall" projectId="{{project.id}}"><b>Overall: </b><div class="overalTimeProjectView_{{project.id}}"></div></a>
+						</li>
+						<li class="nav-item">
+							<a href="#" class="timerow nav-link" timeType="notAccounted" projectId="{{project.id}}"><b>Not Accounted: </b><div class="notAccountedTime_{{project.id}}"></div></a>
 						</li>
 					</ul>
 
