--- a/templates/timetracking/projects.html
+++ b/templates/timetracking/projects.html
@@ -47,9 +47,13 @@
 		
 	});
 </script>
-<style type="text/css">
+<style type="text/css"></style>
 
-</style>
+{% for project in projects %}
+			
+			notAccountedTime({{project.notAccountedTime}},{{project.id}});
+{% endfor %}
+
 <div id="flexboxWrapper">
 	<div class="panel panel-default">
 		<div class="panel-heading panelHead_{{project.id}} panelHead"><b>Add Project</b></div>
