--- a/templates/timetracking/projects.html
+++ b/templates/timetracking/projects.html
@@ -90,9 +90,9 @@
 						<li class="nav-item">
 							<a href="#" class="timerow nav-link" timeType="overall" projectId="{{project.id}}"><b>Overall: </b><div class="overalTimeProjectView_{{project.id}}"></div></a>
 						</li>
-						<li class="nav-item">
+						<!--li class="nav-item">
 							<a href="#" class="timerow nav-link" timeType="notAccounted" projectId="{{project.id}}"><b>Not Accounted: </b><div class="notAccountedTime_{{project.id}}"></div></a>
-						</li>
+						</li-->
 					</ul>
 
 					<div class="container-fluid" style="min-height:95%; ">
