--- a/templates/timetracking/projects.html
+++ b/templates/timetracking/projects.html
@@ -14,7 +14,7 @@
 			todayTime({{project.todayTime}},{{project.id}});
 			weekTime({{project.weekTime}},{{project.id}});
 			monthTime({{project.monthTime}},{{project.id}});
-			//notAccountedTime({{project.notAccountedTime}},{{project.id}});
+			notAccountedTime({{project.notAccountedTime}},{{project.id}});
 		{% endfor %}
 
 		$(".timerow").click(function(e){
@@ -44,11 +44,6 @@
 			}
 		});
 		//
-		{% for project in projects %}
-			//console.log("Project: {{project}}");
-			console.log("AccountedTime: {{project.notAccountedTime}}");
-		{% endfor %}
-		
 	});
 </script>
 <style type="text/css"></style>
@@ -90,9 +85,9 @@
 						<li class="nav-item">
 							<a href="#" class="timerow nav-link" timeType="overall" projectId="{{project.id}}"><b>Overall: </b><div class="overalTimeProjectView_{{project.id}}"></div></a>
 						</li>
-						<!--li class="nav-item">
+						<li class="nav-item">
 							<a href="#" class="timerow nav-link" timeType="notAccounted" projectId="{{project.id}}"><b>Not Accounted: </b><div class="notAccountedTime_{{project.id}}"></div></a>
-						</li-->
+						</li>
 					</ul>
 
 					<div class="container-fluid" style="min-height:95%; ">
