--- a/templates/timetracking/projects.html
+++ b/templates/timetracking/projects.html
@@ -44,6 +44,10 @@
 			}
 		});
 		//
+		$(".nav-item").click(function(fn){
+			$(".nav-item").removeClass("active");
+			$(this).addClass("active");
+		});
 	});
 </script>
 <style type="text/css"></style>
