--- a/templates/timetracking/tracking.html
+++ b/templates/timetracking/tracking.html
@@ -1,10 +1,12 @@
 {% extends "timetracking/mainsite.html" %}
 {% load widget_tweaks %}
 {% block content %}
-<!--p>{{ projects }}</p-->
 <script type="text/javascript">
 	$(document).ready(function() {
+		$.ajax({cache: false});
 		//
+		activeTrackingId = {{openTrackingId}};
+		//alert(activeTrackingId);
 		timer = false;
 		$(".startTrack").click(function(){
 			var projectId = $(this).attr("projectId");
@@ -22,9 +24,14 @@
                 type: "POST",
                 contentType: "application/x-www-form-urlencoded; charset=UTF-8",
                 data: data,
-                success: function (fn) {}
+                success: function (fn) {
+                	activeTrackingId = fn.trackingEntryId;
+                }
             });
-
+            //show comment box
+            $(".commentBox_"+projectId).show();
+            $(".trackingComment").val("Insert Comment");
+            //
 			$(".stopTrack").attr("disabled","disabled");
 			$(".startTrack, .stopBtn_"+projectId).removeAttr("disabled");
 			$(this).attr("disabled","disabled");
@@ -56,20 +63,21 @@
                 success: function (projectTime) {
                 	// set overall time
                 	staticOverallTime(projectTime.projectTime,projectId);
+                	$(".commentBox").hide();
                 }
             });
 
             $(this).attr("disabled","disabled");
 			$(".startBtn_"+projectId).attr("disabled",false);
 			$(".panelBox_"+projectId).removeClass("activeTimerBox");
+			 $(".commentBox_"+projectId).hide();
 			clearInterval(timer);
 			$('.seconds_'+projectId).text("00");
 			$('.minutes_'+projectId).text("00");
 			$('.hours_'+projectId).text("00");
 			
 		});
-
-
+		//
 		function convertDate(toConvertDate) {
 			if(toConvertDate != "None"){
 		    	var dateTimeBlock = toConvertDate.split(" ");
@@ -85,11 +93,7 @@
 		    	//console.log(year+","+month+","+day+","+hours+","+minutes+","+seconds);
 			}
 		    return toConvertDate;  
-		    //return formattedDate + ' ' + hours + ':' + minutes+":"+seconds+" UTC"; 
 		}
-		
-
-
 		// set static overall time and already running timer
 		{% for project in projects %}
 			//convertedDate = convertDate("{{project.openStart}}");
@@ -97,14 +101,13 @@
 			//var newDate = new Date(convertedDate);
 			//console.log(newDate)
 			staticOverallTime({{project.time}},{{project.id}});
-			alreadyRunning({{project.id}},"{{project.openStart}}");
+			alreadyRunning({{project.id}},"{{project.openStart}}","{{openTrackingComment}}");
 		{% endfor %}
-
 		// add project
 		$("#addProject").click(function(){
 			var projectName = $(".projectName").val().trim();
 			if(projectName != ""){
-				var data = 'projectName=' + projectName + '&viewType={{projects.viewType}}';
+				var data = 'projectName=' + encodeURIComponent(projectName) + '&viewType={{projects.viewType}}';
 		        $.ajax({
 		            url: "/addProject",
 		            type: "POST",
@@ -115,6 +118,23 @@
 		            }
 		        });
 			}
+		});
+		//
+		$(".trackingComment").on('focus',function(){
+			if($(this).val() == "Insert Comment"){
+				$(this).val("");
+			}
+			$(this).on('keyup',function(){
+				var comment = $(this).val().trim();
+				var data = 'trackingId=' + activeTrackingId + '&comment='+encodeURIComponent(comment);
+		        $.ajax({
+		            url: "/addComment",
+		            type: "POST",
+		            contentType: "application/x-www-form-urlencoded; charset=UTF-8",
+		            data: data,
+		            success: function (fn) {}
+		        });
+			});
 		});
 	});
 </script>
@@ -139,45 +159,59 @@
 		<div class="panel panel-default">
 			<div class="panel-heading panelHead_{{project.id}} panelHead"><b>{{project.name}}</b></div>
 				<div class="panel-body panelBox_{{project.id}} panelBox">
-					<table>
-						<tr>
-							<td class="tableCellPadding">
-								<button type="button" class="btn btn-default btn-lg startTrack startBtn_{{project.id}}" projectId="{{project.id}}">
-									<span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-								</button>
-							</td>
-							<td class="tableCellPadding">
-								<button type="button" class="btn btn-default btn-lg stopTrack stopBtn_{{project.id}}" projectId="{{project.id}}" disabled="disabled">
-									<span class="glyphicon glyphicon-stop" aria-hidden="true"></span>
-								</button>
-							</td>
-							<td class="tableCellPadding">
-								<div class="currentTimeWrapper">
-									<div class="currentTimeRow">
-										<div class="currentTimeHours hours_{{project.id}} timeString">
-											00
+					
+					<div class="container">
+					  <div class="row align-items-center">
+					    <div class="col-sm-5">
+							<table border="0">
+								<tr>
+									<td class="tableCellPadding">
+										<button type="button" class="btn btn-default btn-lg startTrack startBtn_{{project.id}}" projectId="{{project.id}}">
+											<span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+										</button>
+									</td>
+									<td class="tableCellPadding">
+										<button type="button" class="btn btn-default btn-lg stopTrack stopBtn_{{project.id}}" projectId="{{project.id}}" disabled="disabled">
+											<span class="glyphicon glyphicon-stop" aria-hidden="true"></span>
+										</button>
+									</td>
+									<td class="tableCellPadding">
+										<div class="currentTimeWrapper" align="left">
+											<div class="currentTimeRow">
+												<div class="currentTimeHours hours_{{project.id}} timeString">
+													00
+												</div>
+												<div class="currentTimeDevider timeString">
+													:
+												</div>
+												<div class="currentTimeMinutes minutes_{{project.id}} timeString">
+													00
+												</div>
+												<div class="currentTimeDevider timeString">
+													:
+												</div>
+												<div class="currentTimeSeconds seconds_{{project.id}} timeString">
+													00
+												</div>
+											</div>
 										</div>
-										<div class="currentTimeDevider timeString">
-											:
-										</div>
-										<div class="currentTimeMinutes minutes_{{project.id}} timeString">
-											00
-										</div>
-										<div class="currentTimeDevider timeString">
-											:
-										</div>
-										<div class="currentTimeSeconds seconds_{{project.id}} timeString">
-											00
-										</div>
-									</div>
-								</div>
-							</td>
-						</tr>
-					</table>
+									</td>
+									
+								</tr>
+							</table>
+					    </div>
+					    <div class="col-sm-6 commentBox_{{project.id}} commentBox" projectId="{{project.id}}">
+					    	<div style="margin-top: 15px">{{commentForm.addComment|add_class:"form-control trackingComment"}}</div>
+					    </div>
+					  </div>
+					</div>
 				</div>
 			<div class="panel-footer overalTime_{{project.id}}"></div>
 		</div>
 	</div>
 	{% endfor %}
 </div>
+<script type="text/javascript">
+	//$(".trackingComment").val("foobar");
+</script>
 {% endblock %}
